Use grid-auto-flow for .grid to fix alignment issues

--- a/assets/sass/base/_grid.sass
+++ b/assets/sass/base/_grid.sass
@@ -10,6 +10,7 @@
     grid-template-columns: [full-start] var(--space-m-l) [full-gutter-start half-gutter-start main-start] repeat(6, [col] 1fr) [main-end] var(--space-m-l) [full-end]
     align-items: start
     grid-auto-rows: minmax(min-content, max-content)
+    grid-auto-flow: dense
     justify-content: start
     margin: 0
     max-width: none
@@ -33,6 +34,7 @@
 .sub-grid
   @extend .grid
   grid-column: full-start / full-end
+  grid-auto-flow: dense
   padding-left: 0
   padding-right: 0
 
